// file: proto/gcommon/v2/common/get_user_response.proto
// version: 1.0.1
// guid: 3c135848-65ac-40ed-9e96-bab2045c4997

edition = "2023";

package common.v2;

import "common/v2/user_details.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/common/v2";

message GetUserResponse {
  // User details
  common.v2.UserDetails user = 1;

  // Whether the user was found
  bool found = 2;
}
