// file: proto/gcommon/v2/common/types/update_role_response.proto
// file: proto/gcommon/v2/common/update_role_response.proto
// version: 1.0.1
// guid: 567e89ab-c1d2-3e4f-5a6b-7c8d9e0f1a2b

edition = "2023";

package common.v2;

import "common/v2/error.proto";
import "common/v2/role.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb/v2";

/**
 * Response for updating a role.
 * Returns the updated role.
 */
message UpdateRoleResponse {
  // The updated role
  Role role = 1;

  // Error information if update failed
  common.v2.Error error = 2;
}
