// file: pkg/auth/proto/responses/get_system_stats_response.proto
// version: 1.0.0
// guid: 8a9ebcde-f1a2-3b4c-5d6e-7f8a9b0c1d2e

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";
import "pkg/common/proto/error.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * Response containing authentication system statistics.
 */
message GetSystemStatsResponse {
  // Total number of active users
  int64 active_users = 1;

  // Total number of roles
  int64 total_roles = 2;

  // Total number of active sessions
  int64 active_sessions = 3;

  // Total number of failed login attempts (last 24h)
  int64 failed_logins = 4;

  // Authentication system uptime in seconds
  int64 uptime_seconds = 5;

  // Error information if stats retrieval failed
  gcommon.v1.common.Error error = 6;
}
