// file: pkg/auth/proto/requests/invalidate_user_sessions_request.proto
// version: 1.0.0
// guid: 678e9abc-d1e2-3f4a-5b6c-7d8e9f0a1b2c

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/auth/proto;authpb";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * Request to invalidate all sessions for a user.
 */
message InvalidateUserSessionsRequest {
  // User ID whose sessions should be invalidated
  string user_id = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
