// file: proto/gcommon/v1/common/messages/create_user_request.proto
// version: 1.0.0
// guid: 123e4567-e89b-12d3-a456-426614174001

edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/common";

/**
 * Request to create a new user account.
 */
message CreateUserRequest {
  // Username for the new account
  string username = 1;

  // Email address for the new account
  string email = 2;

  // Password for the new account (should be hashed)
  string password = 3;

  // Full name of the user
  string full_name = 4;

  // Whether the account should be enabled immediately
  bool enabled = 5;

  // Initial roles to assign to the user
  repeated string roles = 6;

  // Additional metadata for the user
  map<string, string> metadata = 7;

  // Whether to require email verification
  bool require_email_verification = 8;

  // Account expiration time (optional)
  google.protobuf.Timestamp expires_at = 9;
}
