// file: proto/gcommon/v1/common/messages/update_user_response.proto
// version: 1.0.0
// guid: 123e4567-e89b-12d3-a456-426614174007

edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/common";

/**
 * Response for updating a user account.
 */
message UpdateUserResponse {
  // Unique identifier for the updated user
  string user_id = 1;

  // Updated username
  string username = 2;

  // Updated email address
  string email = 3;

  // Updated full name
  string full_name = 4;

  // Whether the account is enabled
  bool enabled = 5;

  // Updated roles
  repeated string roles = 6;

  // When the account was last updated
  google.protobuf.Timestamp updated_at = 7;

  // Account expiration time (if set)
  google.protobuf.Timestamp expires_at = 8;

  // List of fields that were actually updated
  repeated string updated_fields = 9;
}
